# mdarray-linalg

./: Cargo.toml
.github/workflows/: ci.yml  rust.yml
mdarray-linalg-blas/: Cargo.toml  build.rs
mdarray-linalg-blas/src/: lib.rs
mdarray-linalg-blas/src/matmul/: context.rs  injection.rs  mod.rs  scalar.rs  simple.rs
mdarray-linalg-blas/src/matvec/: context.rs  scalar.rs  simple.rs
mdarray-linalg-blas/tests/: injection.rs
mdarray-linalg-lapack/: Cargo.toml  build.rs
mdarray-linalg-lapack/src/eig/: scalar.rs
mdarray-linalg-lapack/src/lu/: scalar.rs
mdarray-linalg-lapack/src/qr/: scalar.rs
mdarray-linalg-lapack/src/solve/: scalar.rs
mdarray-linalg-lapack/src/svd/: scalar.rs
mdarray-linalg/src/testing/matvec/: mod.rs
