[workspace]
members = [
  "mdarray-linalg",
  "mdarray-linalg-blas",
  "mdarray-linalg-lapack",
  "mdarray-linalg-faer",
  "mdarray-linalg-nalgebra",
]
resolver = "3"

[workspace.dependencies]
approx = "0.5.1"
cblas-inject = "0.1"
cblas-sys = "0.2.0"
criterion = "0.8.0"
dyn-stack = "0.13.0"
faer = "0.23.2"
faer-traits = "0.23.2"
itertools = "0.14.0"
lapack-inject = "0.1"
lapack-src = { version = "0.11", features = ["openblas"] }
lapack-sys = "0.15.0"
# matamorph = { git = "https://gitlab.com/starcluster/matamorph/", features=["full"] }
matamorph = { version = "0.1.2", features=["full"] }
mdarray = "0.7.2"
mdarray-linalg = { version = "0.2.0", path = "mdarray-linalg" }
nalgebra = "0.34.1"
num-complex = "0.4.6"
num-traits = "0.2.19"
num_cpus = "1.17.0"
openblas-src = { version = "0.10.11", features = ["system"] }
paste = "1.0.15"
rand = "0.9.2"
thiserror = "2.0.12"
