[package]
name = "mdarray-linalg-blas"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["mdarray", "linear-algebra", "math", "matrix", "blas"]
description = "BLAS backend for mdarray-linalg"
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
build = "build.rs"

[features]
default = ["cblas-sys-backend"]
cblas-sys-backend = ["cblas-sys"]
cblas-inject-backend = ["cblas-inject"]

[dependencies]
cblas-sys = { workspace = true, optional = true }
cblas-inject = { workspace = true, optional = true }
mdarray-linalg.workspace = true
mdarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
paste.workspace = true

[dev-dependencies]
openblas-src.workspace = true
